Fix focus visible in lightbox

--- a/src/styles/overrides/lightbox.css
+++ b/src/styles/overrides/lightbox.css
@@ -14,6 +14,16 @@
   @apply !border-mainBorder !bg-galleryThumbnailBg backdrop-blur-md;
 }
 
+.yarl__button:focus-visible {
+  outline: 2px solid var(--color-focusVisibleBorder);
+  outline-offset: -3px;
+}
+
+.yarl__thumbnails_thumbnail {
+  --yarl__thumbnails_thumbnail_focus_box_shadow:
+    0 0 0 2px var(--color-galleryBg), 0 0 0 4px var(--color-focusVisibleBorder);
+}
+
 .yarl__button.yarl__navigation_prev svg,
 .yarl__button.yarl__navigation_next svg {
   width: 48px;
